# imagineration

./: .gitignore  AGENTS.md  Cargo.toml  README.md  imagineration.toml
.github/workflows/: release.yml
docs/: directory-structure.md
docs/apis/: README.md  get-capabilities.md  get-image-metadata.md  get-image.md  get-images.md  get-models.md  post-auth-login.md  post-images-generate.md  presets.md
imagineration-frontend/: .gitignore  Cargo.toml  build.rs
imagineration-frontend/src/: lib.rs
imagineration-frontend/web/: package.json  pnpm-lock.yaml  svelte.config.js
imagineration-frontend/web/src/: app.html
imagineration-frontend/web/src/routes/: +page.svelte
imagineration-generator/: Cargo.toml
imagineration-generator/src/: config.rs  error.rs  fields.rs  lib.rs  log.rs  models.rs  output.rs  presets.rs
imagineration-presets/: Cargo.toml
imagineration-presets/src/: backend.rs  file.rs  lib.rs  memory.rs  model.rs  router.rs  sqlite.rs  store.rs
src/: config.rs  main.rs
src/auth/: issuer.rs  jwt.rs  login.rs  mod.rs  password.rs
src/routes/: capabilities.rs  error.rs  get_image.rs  get_image_metadata.rs  input_assets.rs  list_images.rs  list_models.rs  login.rs  mod.rs  post_generate.rs  summary.rs
