[workspace]
members = ["imagineration-generator", "imagineration-frontend"]
resolver = "3"


[workspace.package]
edition = "2024"
license-file = "LICENSE"

[workspace.dependencies]
imagineration-generator = { path = "imagineration-generator" }
imagineration-frontend = { path = "imagineration-frontend" }

tokio = "1.52.3"

diffusion-rs = "0.1.19"

clap = "4.6.1"
png = "0.18.1"
image = "0.25.10"

serde = "1.0.228"
serde_json = "1.0.150"
toml = "1.1.2"
base64 = "0.22.1"

thiserror = "2.0.18"

uuid = "1.23.2"
chrono = "0.4.44"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

axum = "0.8.9"

which = "8.0.2"

[package]
name = "imagineration"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
imagineration-generator = { workspace = true }
imagineration-frontend = { workspace = true, optional = true }

axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }

base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
png = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
frontend = ["dep:imagineration-frontend"]

vulkan = ["imagineration-generator/vulkan"]
cuda = ["imagineration-generator/cuda"]
metal = ["imagineration-generator/metal"]
hip = ["imagineration-generator/hip"]
