[workspace]
members = ["imagineration-generator", "imagineration-frontend", "imagineration-presets"]
resolver = "3"


[workspace.package]
edition = "2024"
license-file = "LICENSE"

[workspace.dependencies]
imagineration-generator = { path = "imagineration-generator" }
imagineration-frontend = { path = "imagineration-frontend" }
imagineration-presets = { path = "imagineration-presets" }

tokio = "1.52.3"

diffusion-rs = "0.1.19"

clap = "4.6.1"
png = "0.18.1"
image = "0.25.10"

serde = "1.0.228"
serde_json = "1.0.150"
toml = "1.1.2"
base64 = "0.22.1"

jsonwebtoken = "9.3.1"
sha2 = "0.10.9"
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "json",
] }

async-trait = "0.1.89"
sea-orm = { version = "1.1.20", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

thiserror = "2.0.18"

uuid = "1.23.2"
chrono = "0.4.44"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

axum = "0.8.9"

which = "8.0.2"

[package]
name = "imagineration"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
imagineration-generator = { workspace = true }
imagineration-frontend = { workspace = true, optional = true }
imagineration-presets = { workspace = true, optional = true }

axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }

base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
png = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
frontend = ["dep:imagineration-frontend"]
# User-defined presets: mounts the `/v1/presets` API (in-memory and JSON-file backends) and, when
# the frontend is also enabled, the preset UI.
presets = ["dep:imagineration-presets", "imagineration-frontend?/presets"]
# Adds the SQLite (sea-orm) preset backend on top of `presets`.
presets-sqlite = ["presets", "imagineration-presets/sqlite"]

vulkan = ["imagineration-generator/vulkan"]
cuda = ["imagineration-generator/cuda"]
metal = ["imagineration-generator/metal"]
hip = ["imagineration-generator/hip"]
