[package]
name = "imagineration-frontend"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
axum = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
which = { workspace = true }
