[package]
name = "imagineration-presets"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }

# SQLite/RDB backend (sea-orm) is optional; in-memory and JSON-file backends are always available.
sea-orm = { workspace = true, optional = true }
libsqlite3-sys = { workspace = true, optional = true }

[features]
default = []
# Enables the SQLite (sea-orm) backend. `libsqlite3-sys` is bundled so no system SQLite is required.
sqlite = ["dep:sea-orm", "dep:libsqlite3-sys"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
